--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ opencv-python>=4.5.0
 scikit-image>=0.18.0
 peakutils>=1.3.0
 Pillow>=8.0.0
+# For memory monitoring and performance
+psutil>=5.8.0
 # For animation saving
 ffmpeg-python>=0.2.0
 # GUI components
